fixed circle width and school profile alignment

--- a/consumer/src/pages/Profile/style.css
+++ b/consumer/src/pages/Profile/style.css
@@ -2,8 +2,14 @@
 	margin: 20px;
 	display: flex;
 	margin: 20px;
-	max-width: 1300px;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.form-container {
+	width: 100%;
+	max-width: 1300px;
 }
 
 .school-profile {
